# clove

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/hparam_search/: optuna.yaml
conf/launch_on/: mixin_ray_pass_hf_neptune_env_vars.yaml  ray.yaml
scripts/: add_missing_ssl_certs.sh  add_sensitive_env_vars_to_yaml.py  apply_wise_ft.py  compute_classification_results_table.py  example.sh  example_multi_gpu.sh  example_ray.sh  example_ray_hydra.sh  example_ray_hydra_multi_gpu.sh  example_ray_multi_gpu.sh
src/open_clip/: __init__.py  big_vision.py  clip_model.py  coca_model.py  factory.py  hf_model.py  iter_utils.py  loss.py  model.py  modified_resnet.py  openai.py  precision.py  pretrained.py  push_to_hf_hub.py  timm_model.py  tokenizer.py  transform.py  transformer.py  utils.py
src/open_clip/model_configs/: EVA01-g-14-plus.json  EVA01-g-14.json  EVA02-B-16.json  EVA02-E-14-plus.json  EVA02-E-14.json  EVA02-L-14-336.json  EVA02-L-14.json  RN101-quickgelu.json  RN101.json  RN18.json  RN18_32.json  RN18_64.json  RN50-quickgelu.json  RN50.json  RN50x16.json  RN50x4.json  RN50x64.json  ViT-B-16-plus-240.json  ViT-B-16-plus.json  ViT-B-16-quickgelu.json  ViT-B-16.json  ViT-B-32-256.json  ViT-B-32-plus-256.json  ViT-B-32-quickgelu.json  ViT-B-32.json  ViT-H-14-378-quickgelu.json  ViT-H-14-quickgelu.json  ViT-H-14.json  ViT-H-16.json  ViT-L-14-280.json  (+39 more)
src/training/: __init__.py  __main__.py  argparse_with_defaults.py  aro_datasets.py  collate.py  data.py  data_utils.py  decode_utils.py  distributed.py  file_utils.py  frame_sampler.py  hydra.py  logger.py  metric_utils.py  params.py  profiler.py  s3_utils.py  scheduler.py  spacy_parser.py  text_negatives_data.py  train.py  utils.py  video_datasets.py  video_reader.py  video_utils.py  zero_shot.py  zero_shot_classifier.py  zero_shot_metadata.py
(+2 files in other folders)
